# radiofrequency

./: CLAUDE.md  PROTOCOL.md  README.md  SCOPE.md  cli.py  main.py  pyproject.toml  signal_explorer.py
devices/: sofucor_fan.yaml
docs/plans/: 2026-03-08-fan-control-phase1.md
firmware/: platformio.ini
firmware/src/: main.cpp
src/: device.py
tests/: test_device.py
visualizations/ook-signal-explorer/: README.md  requirements.txt  signal_explorer.py
