[project]
name = "radiofrequency"
version = "0.1.0"
description = "Generic RF signal reverse-engineering and replay toolkit"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "click>=8.1",
    "httpx>=0.27",
    "matplotlib>=3.10",
    "numpy>=1.26",
    "pyyaml>=6.0",
    "streamlit>=1.44",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
]

[project.scripts]
fanctl = "cli:cli"
